# rai

./: .clang-format  .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .licenserc.json  .pre-commit-config.yaml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES.md  Dockerfile.humble-repro  INDEX.md  INVESTIGATION_REPORT.md  INVESTIGATION_SUMMARY_VISUAL.md  PROPOSED_FIX.md  QUICK_REFERENCE.md  README.md  REPRODUCTION_README.md  SECURITY.md  SUMMARY.md  a.py  agent_bench.py  artifact_database.pkl  awesome_spawner.py  b.py  code_gen.ipynb  codecov.yml  config.toml  demos.repos  gui.js  hmi.py  index.html  minimal_repro.py  minimal_repro_simple.py  mkdocs.yml  objects.inv  pyproject.toml  (+8 more)
src/perception/rai_whatisee/: CMakeLists.txt  package.xml
src/perception/rai_whatisee/src/: rai_whatisee_node.cpp
src/rai/: LICENSE  README.md  history_saver.py  message.py  package.xml  prompts.py  requirements.py  setup.cfg  setup.py
src/rai/actions/: README.md  __init__.py  actions.py  executor.py  ros_actions.py
src/rai/apps/: talk_to_docs.py  task_executor.py
src/rai/cli/: rai_cli.py
src/rai/communication/: __init__.py  ros_communication.py
src/rai/config/: models.py
src/rai/documents/: loader.py
src/rai/langchain_extension/: history_saver.py  tooling.py
src/rai/rai/: __init__.py  base_node.py  history_saver.py  node.py  ros2_apis.py  run_task.py  state_node.py
src/rai/rai/agents/: __init__.py  base.py  conversational_agent.py  state_based.py  tool_runner.py  voice_agent.py
src/rai/rai/apps/: __init__.py  document_loader.py  high_level_api.py  state_analyzer.py  talk_to_docs.py  task_executor.py  task_planner.py
src/rai/rai/cli/: rai_cli.py
src/rai/rai/communication/: README.md  __init__.py  ari_connector.py  base_connector.py  communication.py  hri_connector.py  http_connector.py  ros_communication.py  ros_connector.py  ros_connectors.py  rri_connector.py  sound_device_connector.py
src/rai/rai/config/: __init__.py  models.py
src/rai/rai/documents/: loader.py
src/rai/rai/extensions/: navigator.py
src/rai/rai/messages/: __init__.py  multimodal.py  utils.py
src/rai/rai/scenario_engine/: messages.py  scenario_engine.py  tool_runner.py
src/rai/rai/tools/: __init__.py  debugging_assistant.py  hmi_tools.py  planning_tools.py  render.py  time.py  tool_runner.py  utils.py
src/rai/rai/utils/: artifacts.py  configurator.py  model_initialization.py  ros.py  ros_async.py  ros_executors.py  ros_logs.py
src/rai/scenario_engine/: README.md  __init__.py  messages.py  scenario_engine.py  tool_runner.py
src/rai/tools/: hmi_tools.py  ros_cli_tools.py  ros_cli_tools_simple.py  ros_mock_tools.py  ros_tools.py  utils.py
src/rai/tools/ros/: __init__.py  cat_demo_tools.py  cli.py  native.py  (+5 more)
src/rai/vendors/: README.md  vendors.py
src/rai_asr/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/rai_asr/launch/: local.launch.py  openai.launch.py  transcribe.launch.py
src/rai_asr/rai_asr/: __init__.py  asr_clients.py  asr_node.py
src/rai_bench/: README.md  pyproject.toml
src/rai_bench/o3de_test_bench/: main.py  o3de_config.yaml  scene1.yaml  scene2.yaml  scene3.yaml  scene4.yaml
src/rai_bench/rai_bench/: __init__.py  agents.py  base_benchmark.py  benchmark_model.py  main.py  o3de_test_benchmark.py  results.csv  scene2_config.yaml  scene_config.yaml  scene_no_carrot_config.yaml  test_models.py  utils.py  visualise_results.py
src/rai_benchmarks/: benchmark.py  benchmark_model.py  manager.py  pyproject.toml  showcase.py
src/rai_benchmarks/rai_benchmarks/: benchmark_model.py  o3de_api.py
src/rai_benchmarks/scenarios/: longest_object.py  move_to_the_left.py  place_on_top.py  replace_types.py  scenario_base.py
src/rai_bringup/: package.xml  setup.py
src/rai_bringup/launch/: hri.launch.py  openset.launch.py  sim_whoami_demo.launch.py  voice.launch.py
src/rai_core/: README.md  pyproject.toml
src/rai_core/rai/: __init__.py  node.py  ros2_apis.py
src/rai_extensions/rai_open_set_vision/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/rai_extensions/rai_perception/: MIGRATION.md  README.md  follow-ups.md  package.xml  pyproject.toml  rethinking_usability.md  setup.cfg  setup.py
src/rai_finetune/: README.md  pyproject.toml  setup_finetune_shell.sh
src/rai_finetune/rai_finetune/: __init__.py  data_cli.py
src/rai_interfaces/: CMakeLists.txt  README.md  package.xml
src/rai_interfaces/action/: Task.action
src/rai_interfaces/msg/: AudioMessage.msg  HRIMessage.msg  RAIDetectionArray.msg
src/rai_interfaces/srv/: EmbodimentInfo.srv  Feedback.srv  ManipulateObject.srv  ManipulatorMoveTo.srv  RAIGroundedSam.srv  RAIGroundingDino.srv  StringList.srv  VectorStoreRetrieval.srv  WhatISee.srv
src/rai_s2s/: README.md  pyproject.toml
src/rai_s2s/rai_s2s/: __init__.py
src/rai_semap/: README.md  design.md  pyproject.toml
src/rai_sim/: README.md  pyproject.toml
src/rai_sim/rai_sim/: __init__.py  config_loader.py  engine_connector.py  launch_manager.py  simulation_bridge.py  simulation_connector.py  tools.py  utils.py
src/rai_simulations/: pyproject.toml
src/rai_simulations/rai_simulations/: __init__.py  engine_connector.py  example_scene2.yaml  o3de_api.py  scene_config.yaml
src/rai_tiny/: README.md  pyproject.toml  setup.py
src/rai_tiny/rai_tiny/: __init__.py  _tiny.c
src/rai_tts/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/rai_tts/config/: elevenlabs.yaml  opentts.yaml
src/rai_tts/launch/: elevenlabs.launch.py  opentts.launch.py
src/rai_tts/rai_tts/: __init__.py  tts_clients.py  tts_node.py
src/rai_whoami/: README.md  example.py  package.xml  pyproject.toml  setup.py
src/rai_whoami/launch/: rai_whoami.launch.py
src/rai_whoami/rai_whoami/: __init__.py  build_whoami.py  initialize_docs_directory.py  rai_whoami_node.py
src/rai_whoami/resource/: default_robot_constitution.txt
src/rai_whoami/scripts/: load_docs.py
src/rai_whoami/test/: test_flake8.py  test_pep257.py
src/state_tools/rai_state_logs/: CMakeLists.txt  README.md  package.xml
(+1096 files in other folders)
