[project]
name = "rai_framework"
version = "1.0.0"
description = "RAI is a framework for building general multi-agent systems, bringing Gen AI features to ROS enabled robots."
readme = "README.md"
authors = [
    {name = "Maciej Majek", email="maciej.majek@robotec.ai"}, 
    {name= "Bartłomiej Boczek", email="bartlomiej.boczek@robotec.ai"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pre-commit >=3.7.0, <4.0.0",
    "tabulate >=0.9.0, <1.0.0",
    "pytest >=8.2.0, <9.0.0",
    "pytest-timeout >=2.3.1, <3.0.0"
]
requires-python = ">=3.10, <3.13"

[tool.uv.sources]
rai_core = {path = "src/rai_core", editable = true}
rai_whoami = {path = "src/rai_whoami", editable = true}
rai_s2s = {path = "src/rai_s2s", editable = true}
rai_sim = {path = "src/rai_sim", editable = true}
rai_bench = {path = "src/rai_bench", editable = true}

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocstrings-python",
    "mkdocs-markdownextradata-plugin",
    "mkdocs-callouts",
]

s2s = [
    "rai_s2s[all]",
]

simbench = [
    "rai_sim",
    "rai_bench",
]

openset = [
    "torch >=2.3.1, <2.7.0",
    "torchvision >=0.18.1, <0.22.0",
    "rf-groundingdino >=0.2.0",
    "sam2 @ git+https://github.com/RobotecAI/Grounded-SAM-2.git@main", 
]

nomad = [
    "visualnav_transformer @ git+https://github.com/RobotecAI/visualnav-transformer-ros2.git@main",
    "gdown >=5.2.0",
]

[tool.pytest.ini_options]
markers = [
    "billable: marks test as billable  (deselect with '-m \"not billable\"')",
    "ci_only: marks test as cli only (deselect with '-m \"not ci_only\"')",
]
addopts = "-m 'not billable and not ci_only' --ignore=src"
log_cli = true
log_cli_level = "INFO"
