[project]
name = "rai_framework"
version = "1.0.0"
description = "RAI is a framework for building general multi-agent systems, bringing Gen AI features to ROS enabled robots."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Maciej Majek", email = "maciej.majek@robotec.ai" },
    { name = "Bartlomiej Boczek", email = "bartlomiej.boczek@robotec.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "rai_core",
    "rai_whoami",
    "pre-commit>=3.7.0,<4.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
]

[dependency-groups]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocstrings-python",
    "mkdocs-markdownextradata-plugin",
    "mkdocs-callouts",
]
s2s = ["rai_s2s[all]"]
semap = ["rai_semap"]
simbench = ["rai_sim", "rai_bench"]
perception = ["rai_perception"]
nomad = [
    "visualnav_transformer @ git+https://github.com/RobotecAI/visualnav-transformer-ros2.git@main",
    "gdown>=5.2.0,<6.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
rai_core = { path = "src/rai_core", editable = true }
rai_whoami = { path = "src/rai_whoami", editable = true }
rai_s2s = { path = "src/rai_s2s", editable = true }
rai_semap = { path = "src/rai_semap", editable = true }
rai_sim = { path = "src/rai_sim", editable = true }
rai_bench = { path = "src/rai_bench", editable = true }
rai_perception = { path = "src/rai_extensions/rai_perception", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
markers = [
    "billable: marks test as billable  (deselect with '-m \"not billable\"')",
    "ci_only: marks test as cli only (deselect with '-m \"not ci_only\"')",
    "manual: marks tests as manual (may require demo app to be running, deselect with '-m \"manual\")",
]
addopts = "-m 'not billable and not ci_only and not manual' --ignore=src"
log_cli = true
log_cli_level = "INFO"
