<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_asr</name>
  <version>0.1.0</version>
  <description> An Automatic Speech Recognition package, leveraging Whisper for transcription and
    Silero VAD for voice activity detection. This node captures audio, detects speech, and
    transcribes the spoken content, publishing the transcription to a topic. </description>
  <maintainer email="magdalena.kotynia@robotec.ai">mkotynia</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>portaudio2</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
