[tool.poetry]
name = "rai_asr"
version = "1.0.0"
description = "Automatic Speech Recognition module for RAI framework"
authors = ["Maciej Majek <maciej.majek@robotec.ai>", "Bartłomiej Boczek <bartlomiej.boczek@robotec.ai>", "Kajetan Rachwał <kajetan.rachwal@robotec.ai>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "rai_asr", from = "." },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
sounddevice = "^0.4.7"
openai-whisper = "^20231117"
scipy = "^1.14.0"
faster-whisper = "^1.1.1"
pydub = "^0.25.1"
