[project]
name = "rai-bench"
version = "0.2.0"
description = "Package for running and creating benchmarks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jakub Matejczyk", email = "jakub.matejczyk@robotec.ai" },
    { name = "Magdalena Kotynia", email = "magdalena.kotynia@robotec.ai" },
]
dependencies = [
    "inflect==7.5.0",
    "plotly>=6.0.1,<7.0.0",
    "rai_core>=2.0.0a2,<3.0.0",
    "rai_sim>=0.0.2,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rai_bench"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
