[tool.poetry]
name = "rai-benchmarks"
version = "0.0.1"
description = "Framework to create and run benchmarks"
authors = ["Magdalena Kotynia <magdalena.kotynia@robotec.ai>", "Kacper Dąbrowski <kacper.dabrowski@robotec.ai>", "Jakub Matejczyk <jakub.matejczyk@robotec.ai>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "rai_benchmarks", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10, <3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
