[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rai_core"
version = "2.5.2"
description = "Core functionality for RAI framework"
authors = ["Maciej Majek <maciej.majek@robotec.ai>", "Bartłomiej Boczek <bartlomiej.boczek@robotec.ai>", "Kajetan Rachwał <kajetan.rachwal@robotec.ai>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "rai", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10, <3.13"
langchain-core = "^0.3"
langgraph = "*"
langgraph-prebuilt = "*"
langchain = "*"
langchain-aws = "*"
langchain-openai = "*"
langchain-ollama = "^0.3.4"
langchain-community = "*"

requests = "^2.32.2"
coloredlogs = "^15.0.1"
tqdm = "^4.66.4"
deprecated = "^1.2.14"
tomli = "^2.0.1"
tomli-w = "^1.1.0"
opencv-python = "^4.9.0.80"
lark = "^1.1.9"
transforms3d = "^0.4.1"
pillow = "^11.0.0"
langfuse = "^2.60.2"
pydub = "^0.25.1"
streamlit = "^1.44"
numpy = "<2.0"

[tool.poetry.scripts]
rai-config-init = "rai.initialization.config_initialization:main"
