[project]
name = "rai_core"
version = "2.11.1"
description = "Core functionality for RAI framework"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Maciej Majek", email = "maciej.majek@robotec.ai" },
    { name = "Bartlomiej Boczek", email = "bartlomiej.boczek@robotec.ai" },
    { name = "Kajetan Rachwal", email = "kajetan.rachwal@robotec.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "langchain-core>=0.3,<0.4",
    "langgraph",
    "langgraph-prebuilt",
    "langchain",
    "langchain-aws",
    "langchain-openai",
    "langchain-ollama>=0.3.4,<0.4.0",
    "langchain-google-genai",
    "langchain-community",
    "requests>=2.32.2,<3.0.0",
    "coloredlogs>=15.0.1,<16.0.0",
    "tqdm>=4.66.4,<5.0.0",
    "deprecated>=1.2.14,<2.0.0",
    "tomli>=2.0.1,<3.0.0",
    "tomli-w>=1.1.0,<2.0.0",
    "opencv-python>=4.9.0.80,<5.0.0.0",
    "opencv-python-headless>=4.9.0.80,<5.0.0.0",
    "lark>=1.1.9,<2.0.0",
    "transforms3d>=0.4.1,<0.5.0",
    "pillow>=11.0.0,<12.0.0",
    "langfuse>=2.60.2,<3.0.0",
    "pydub>=0.25.1,<0.26.0",
    "streamlit>=1.44,<2.0.0",
    "numpy<2.0",
]

[project.scripts]
rai-config-init = "rai.initialization.config_initialization:main"

[tool.uv.build-backend]
module-root = ""
module-name = "rai"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
