[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rai_finetune"
version = "0.1.0"
description = "RAI fine-tuning utilities using Unsloth - standalone package"
authors = ["Julia Jia <juliajster@gmail.com>"]
readme = "README.md"
packages = [{include = "rai_finetune"}]
# Make this package completely independent
[tool.poetry.dependencies]
python = "^3.10, <3.12"  # Python 3.12+ has Dynamo compatibility issues with unsloth

# Core ML dependencies
torch = "^2.4.0"
torchvision = "^0.19.0"
transformers = ">=4.36.0"
datasets = ">=2.14.0"
accelerate = ">=0.24.0"

# Unsloth for efficient fine-tuning (with zoo dependency)
unsloth = {git = "https://github.com/unslothai/unsloth.git", extras = ["colab-new"]}
unsloth-zoo = "^2024.11.13"

# PEFT for parameter-efficient fine-tuning
peft = ">=0.7.0"

# Scientific computing and utilities
numpy = ">=1.24.0"
scipy = ">=1.10.0"
scikit-learn = ">=1.3.0"
tqdm = ">=4.65.0"

# Hugging Face Hub integration
huggingface-hub = ">=0.17.0"

# Langfuse for LLM observability and evaluation
langfuse = "^2.0.0"

# Performance optimization (optional but recommended)
flash-attn = ">=2.4.0"
xformers = ">=0.0.22"

# GGUF conversion and Ollama compatibility
llama-cpp-python = ">=0.2.0"
sentencepiece = ">=0.1.99"
protobuf = ">=4.21.0"
mistral-common = "^1.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-timeout = "^2.3.1"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
