[project]
name = "rai_s2s"
version = "1.0.0"
description = "Speech-to-Speech module for RAI framework"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Kajetan Rachwal", email = "kajetan.rachwal@robotec.ai" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sounddevice>=0.4.7,<0.5.0",
    "scipy>=1.14.0,<2.0.0",
    "pydub>=0.25.1,<0.26.0",
    "torchaudio==2.3.1",
    "onnxruntime>=1.23,<1.24; python_version >= '3.10' and python_version < '3.11' and platform_machine == 'x86_64'",
    "onnxruntime>=1.24,<1.25; python_version >= '3.12' and python_version < '3.13' and platform_machine == 'x86_64'",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=1.4.1,<2.0.0"]
whisper = ["openai-whisper>=20250625,<20250626"]
fasterwhisper = ["faster-whisper>=1.1.1,<2.0.0"]
wakeword = ["openwakeword @ git+https://github.com/maciejmajek/openWakeWord.git@chore/remove-tflite-backend"]
kokoro = ["kokoro-onnx==0.3.3"]
gpu = [
    "onnxruntime-gpu>=1.23,<1.24; python_version >= '3.10' and python_version < '3.11' and platform_machine == 'x86_64'",
    "onnxruntime-gpu>=1.24,<1.25; python_version >= '3.12' and python_version < '3.13' and platform_machine == 'x86_64'",
]
all = [
    "elevenlabs>=1.4.1,<2.0.0",
    "openai-whisper>=20250625,<20250626",
    "faster-whisper>=1.1.1,<2.0.0",
    "openwakeword @ git+https://github.com/maciejmajek/openWakeWord.git@chore/remove-tflite-backend",
    "kokoro-onnx==0.3.3",
    "onnxruntime-gpu>=1.23,<1.24; python_version >= '3.10' and python_version < '3.11' and platform_machine == 'x86_64'",
    "onnxruntime-gpu>=1.24,<1.25; python_version >= '3.12' and python_version < '3.13' and platform_machine == 'x86_64'",
]

[tool.hatch.build.targets.wheel]
packages = ["rai_s2s"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
