[project]
name = "rai_semap"
version = "0.1.0"
description = "Semantic mapping and spatial memory for RAI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Julia Jia" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "rai_core",
    "rai_perception",
]

[dependency-groups]
dev = ["pytest>=8.2.0,<9.0.0"]

[tool.uv.sources]
rai_core = { path = "../rai_core", editable = true }
rai_perception = { path = "../rai_extensions/rai_perception", editable = true }

[tool.uv.build-backend]
module-root = ""
module-name = "rai_semap"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
