[tool.poetry]
name = "rai-sim"
version = "0.0.2"
description = "Package to run simulations"
authors = ["Jakub Matejczyk <jakub.matejczyk@robotec.ai>", "Magdalena Kotynia <magdalena.kotynia@robotec.ai>", "Kacper Dąbrowski <kacper.dabrowski@robotec.ai>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "rai_sim", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10, <3.13"
PyYAML = "*"
rai_core = ">=2.0.0.a2,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
