[project]
name = "rai-sim"
version = "0.0.2"
description = "Package to run simulations"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Jakub Matejczyk", email = "jakub.matejczyk@robotec.ai" },
    { name = "Magdalena Kotynia", email = "magdalena.kotynia@robotec.ai" },
    { name = "Kacper Dabrowski", email = "kacper.dabrowski@robotec.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "PyYAML",
    "rai_core>=2.0.0a2,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rai_sim"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
