<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_whoami</name>
  <version>0.1.0</version>
  <description>RAI package wrapping up sources of information about the robot, and presenting interfaces to interact with it</description>
  <maintainer email="adam.dabrowski@robotec.ai">Adam Dabrowski</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rai_interfaces</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
