[project]
name = "rai_whoami"
version = "0.0.5"
description = "Package to extract embodiment information from robot documentation"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Maciej Majek", email = "maciej.majek@robotec.ai" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "PyYAML",
    "langchain",
    "PyPDF2",
    "Pillow",
    "faiss-cpu",
    "pypdf>=5.4.0,<6.0.0",
]

[project.scripts]
build-whoami = "rai_whoami.build_whoami:main"
initialize-docs = "rai_whoami.initialize_docs_directory:main"

[tool.hatch.build.targets.wheel]
packages = ["rai_whoami"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
