<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_whatisee</name>
  <version>0.1.0</version>
  <description>A package that handles robot perception in a way that is best suited for AI Agents</description>
  <maintainer email="adam.dabrowski@robotec.ai">Adam Dabrowski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rai_interfaces</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
