<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rai_perception</name>
  <version>0.1.0</version>
  <description>Package enabling open set vision for RAI</description>
  <maintainer email="kajetan.rachwal@robotec.ai">Kajetan Rachwał</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>rai_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
